[package]
name = "gravatar"
version = "0.1.2"
authors = ["Amit Chowdhury <amitc97@gmail.com>"]
description = "A small library that generates Gravatar image URLs."
documentation = "https://chowdhurya.github.io/rust-gravatar/gravatar/"
homepage = "https://github.com/chowdhurya/rust-gravatar/"
repository = "https://github.com/chowdhurya/rust-gravatar/"
readme = "README.md"
keywords = [
  "gravatar",
  "avatar",
  "profile",
  "image",
  "wordpress"
]
license = "BSD-3-Clause"

[dependencies]
rust-crypto = "0.2.26"
url = "0.2.28"
